# memory_management

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/os_lab2/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: data_display.dart  main.dart
lib/ffi/: native_ffi.dart  rust_ffi.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust_ffi/: Cargo.toml
rust_ffi/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs
rust_ffi/src/api/: memory_manager.rs  pages.rs  scheduler.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt  rust.cmake
windows/runner/: Runner.rc  main.cpp
