[package]
name = "rust_ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_ffi"
crate-type = ["staticlib", "cdylib"]

[build-dependencies]
flutter_rust_bridge_codegen = "^1.82.6"

[dependencies]
rand = "^0.8.2"
flutter_rust_bridge = "^1.82.6"
flutter_rust_bridge_macros = "^1.82.6"
